--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,22 +1,22 @@
- <!-- About Section -->
-    <section class="success" id="about">
+ <!-- About (gameinfo) Section -->
+    <section class="success" id="gameinfo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <h2>Game Info</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Description: Chase the wind, shoot the breeze and do much more in “All is Vanity,” Xenizo Games’ exciting dual-stick, isometric action/arcade game that transports players to a world of Middle Eastern madness.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Follow the royal teacher Qoheleth and his allies as they defend “everything under the sun” and teach Shishaq a lesson. Will our heroes use their wind-control powers wisely, or will they succumb to the temptations of success, luxury and fame?</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="#download" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download Beta
                     </a>
                 </div>
             </div>
