--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,14 +19,21 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#screenshots">Screenshots</a>
+                    </li>
+                   <li class="page-scroll">
+                        <a href="#trailer">Trailer</a>
+                    </li>
+				   <li class="page-scroll">
+                        <a href="#download">Download</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#music">Music</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+					<li class="page-scroll">
+                        <a href="#gameinfo">Game Info</a>
                     </li>
+				    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -40,10 +47,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
-                    <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                    <img class="img-responsive" src="img/msgAllIsVanityOrange.png" alt="">
+                    <img class="img-responsive" src="img/msgChasingTheWindSmall.png" alt="">
+					<div class="intro-text">
+                        <span class="skills">Coming Early 2015</span>
                     </div>
                 </div>
             </div>
