--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,10 @@
 
     {% include header.html %}
     {% include portfolio_grid.html %}
-    {% include about.html %}
-    {% include contact.html %}
+    {% include trailer.html %}
+	{% include download.html %}
+    {% include music.html %}
+	{% include about.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
