add new about, remove unused portfolio

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,13 +8,43 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Description: Chase the wind, shoot the breeze and do much more in “All is Vanity,” Xenizo Games’ exciting dual-stick, isometric action/arcade game that transports players to a world of Middle Eastern madness.</p>
+                <div class="col-lg-12">
+                    <p>A vanity project is usually made for the creator’s benefit and pleasure. But we hope “All is Vanity: Chasing the Wind” appeals to everyone as it takes players on a surreal trip through the ancient Middle East — and also through life’s glorious absurdities.</p>
                 </div>
-                <div class="col-lg-4">
-                    <p>Follow the royal teacher Qoheleth and his allies as they defend “everything under the sun” and teach Shishaq a lesson. Will our heroes use their wind-control powers wisely, or will they succumb to the temptations of success, luxury and fame?</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+				
+				<div class="col-lg-12">
+					<p>“All is Vanity” is a story framed around themes in the book of Ecclesiastes. While the story alludes to Solomon-era characters, it’s an original work of fiction and not a “Bible game” per se. Expect dialogue that reads more like the Marx Brothers than a King James translation.</p>
+				</div>
+                
+				<div class="col-lg-12">
+					<p>And just as Ecclesiastes grapples with tough issues — like extolling life’s fleeting pleasures, lamenting their transience or pondering sacred mysteries — so will our game give players plenty of options and challenges to explore.</p>
+				</div>
+                
+				<div class="col-lg-12">
+					<p>The core gameplay mechanic in “All is Vanity” is the wind-centered physics engine. Players touch wind spirits called ruaḥim to change the wind’s speed or direction. This can blow hero or enemy bullets off course and change the tide of a frantic shmup-like battle.</p>
+				</div>
+                
+				<div class="col-lg-12">
+					<p>At this stage of development, the plot deals with a mystery of strong winds, shorter days and surreal seasons.</p>
+				</div>
+                
+				<div class="col-lg-12">
+					<p>As a result, a scatterbrained scholar, Qoheleth, and a poor — some might say poorly chosen — hero of destiny, Hevel, set off to settle a dispute. Are these changes caused by nature’s cycles, social oppression … or something else?</p>
+				</div>
+                
+				<div class="col-lg-12">
+				<p>But “All is Vanity” won’t send players on a journey into despair. Our art style is sprite-based, brightly colored and isometric — an ironic contrast to the pessimistic streak found in its famous source material.</p>
+				</div>
+                
+				<div class="col-lg-12">
+				<p>Stay tuned in the weeks and months ahead for much more news and details about this project. We look forward to hearing public feedback while it’s still in development.</p>
+				</div>
+				
+				<div class="col-lg-12">
+				<p>In the mean time, please spread the news. Spread it like the wind!</p>
+				</div>
+				
+				<div class="col-lg-10 col-lg-offset-2 text-center">
                     <a href="#download" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Beta
                     </a>
