--- a/_includes/download.html
+++ b/_includes/download.html
@@ -16,23 +16,25 @@
                 </div>
 				 <div class="col-lg-8">
                     <h4>Release Notes</h4>
-					<h5>Beta 0.1.0 - Initial Release</h5>
+					<h5>Development Build 0.1.0</h5>
 					<p>An isometric shoot'emup that combines rpg elements, unique physics based wind mechanics, and arena shooter game-play elements.  Play through the introductory tutorials to meet the for a general feel of the game.  Download the windows version (.exe) or play the flash version online.</p>
 				</div>
 				<div class="col-lg-offset-2 col-lg-2">
 					 <img class="img-responsive" src="img/profile-bck.png" alt="">
 				</div>
                 <div class="col-lg-12 text-center">
-                    <a href="#TODO" class="btn btn-lg btn-outline">
+                    <a href="http://xenizogames.itch.io/all-is-vanity" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Windows
                     </a>
-					 <a href="#TODO" class="btn btn-lg btn-outline">
+					 <a href="flash/index.html" class="btn btn-lg btn-outline">
                         <i class="fa fa-play"></i> Flash
                     </a>
                 </div>
 				<div class="col-lg-12">
-                    <ul class="nav nav-pills">
+                    <ul class="breadcrumb" style="margin-top:20px">
 						<li><a href="http://www.openfl.org/" >Made with HaXe and OpenFL</a></li>
+						<li><a href="http://xenizogames.itch.io/all-is-vanity" >itch.io</a></li>
+						<li><a href="#TODO" >Devlog</a></li>
 					</ul>
                 </div>
             </div>
