--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,9 @@
 					<li class="page-scroll">
                         <a href="#gameinfo">Game Info</a>
                     </li>
-				    
+				    <li class="page-scroll">
+                        <a href="http://allisvanity.net/press/index.php">Press Kit</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
